force-app/main/default/objects/Contact/fields/Floor__c.field-meta.xml
<CustomField>
    <fullName>Floor__c</fullName>
    <formula>Office_Facility__r.Name   &amp; &quot;-&quot; &amp; MID(MID(Room__r.Name ,5,6),0,FIND(&quot;-&quot;,MID(Room__r.Name,5,6))-1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Floor</label>
    <type>Text</type>
</CustomField>