force-app/main/default/objects/Contact/fields/Hand_Crafted_for_Demo_Scenario__c.field-meta.xml
<CustomField>
    <fullName>Hand_Crafted_for_Demo_Scenario__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for Demo Reset</description>
    <label>Hand Crafted for Demo Scenario</label>
    <type>Checkbox</type>
</CustomField>