force-app/main/default/objects/Contact/fields/Office_Facility__c.field-meta.xml
<CustomField>
    <fullName>Office_Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Office Facility</label>
    <referenceTo>Facility__c</referenceTo>
    <relationshipLabel>Occupants</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>