force-app/main/default/objects/Contact/fields/Room__c.field-meta.xml
<CustomField>
    <fullName>Room__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Room</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Room must be a cubicle or personal office.</errorMessage>
        <filterItems>
            <field>Room__c.Room_Type__c</field>
            <operation>equals</operation>
            <value>Cubicle, Personal Office</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Room__c</referenceTo>
    <relationshipLabel>Occupants</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>